[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_question.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_question_circle.svg" type="Texture" id=2]

[node name="StepQuestion" type="GraphNode"]
margin_top = 44.0
margin_right = 225.0
margin_bottom = 189.0
mouse_filter = 1
title = "Question ?"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 0.803922, 0.631373, 0.109804, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="top" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 209.0
margin_bottom = 56.0
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="top"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 44.0
margin_right = 65.0
margin_bottom = 32.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="uidEdit" type="LineEdit" parent="top"]
margin_left = 69.0
margin_right = 149.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 0 )
placeholder_text = "unique ID"

[node name="StepLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 57.0
margin_right = 209.0
margin_bottom = 77.0
text = "text:"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 78.0
margin_right = 209.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3
theme_type_variation = "FontDefault"
wrap_enabled = true

[node name="DocsLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 119.0
margin_right = 209.0
margin_bottom = 139.0
text = "docs url:"

[node name="DocsEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 140.0
margin_right = 209.0
margin_bottom = 172.0

[node name="HighlightLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 173.0
margin_right = 209.0
margin_bottom = 193.0
text = "highlight answer ids:"

[node name="HighlightEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 194.0
margin_right = 209.0
margin_bottom = 226.0
placeholder_text = "[0,10,-5]"

[node name="PrevBtn" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 227.0
margin_right = 209.0
margin_bottom = 259.0
pressed = true
text = "Allow Previous"

[connection signal="text_changed" from="top/uidEdit" to="." method="_on_uidEdit_text_changed"]
[connection signal="pressed" from="PrevBtn" to="." method="_on_PrevBtn_pressed"]
